Refactor structure; printing not working

--- a/src/led_blinky/armgcc/CMakeLists.txt
+++ b/src/led_blinky/armgcc/CMakeLists.txt
@@ -17,7 +17,7 @@ SET(CMAKE_EXECUTABLE_LIBRARY_SUFFIX)
 
 # CURRENT DIRECTORY
 SET(ProjDirPath ${CMAKE_CURRENT_SOURCE_DIR})
-SET(ProjSDKPath ${ProjDirPath}/SDK_2_12_0_FRDM-K22F)
+SET(ProjSDKPath ${ProjDirPath}/../../../SDK_2_12_0_FRDM-K22F)
 SET(ProjName led_blinky)
 
 SET(EXECUTABLE_OUTPUT_PATH ${ProjDirPath}/${CMAKE_BUILD_TYPE})
@@ -32,31 +32,32 @@ include(${ProjDirPath}/flags.cmake)
 
 include(${ProjDirPath}/config.cmake)
 
-include_directories(${ProjDirPath}/src-gen/${ProjName}/core)
-include_directories(${ProjDirPath}/src-gen/${ProjName}/core/platform)
-include_directories(${ProjDirPath}/src-gen/${ProjName}/core/federated)
+include_directories(${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/core)
+include_directories(${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/core/platform)
+include_directories(${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/core/federated)
+
 set(LF_MAIN_TARGET ${ProjName})
 # Declare a new executable target and list all its sources
 
 add_executable(${MCUX_SDK_PROJECT_NAME}
-"${ProjSDKPath}/boards/frdmk22f/project_template/board.c"
-"${ProjSDKPath}/boards/frdmk22f/project_template/board.h"
-"${ProjSDKPath}/boards/frdmk22f/project_template/clock_config.c"
-"${ProjSDKPath}/boards/frdmk22f/project_template/clock_config.h"
-"${ProjSDKPath}/boards/frdmk22f/project_template/pin_mux.c"
-"${ProjSDKPath}/boards/frdmk22f/project_template/pin_mux.h"
-"${ProjSDKPath}/boards/frdmk22f/project_template/FreeRTOSConfig.h"
-"${ProjDirPath}/src-gen/${ProjName}/${ProjName}.c"
-"${ProjDirPath}/src-gen/${ProjName}/core/platform/lf_freertos_support.c"
-"${ProjDirPath}/src-gen/${ProjName}/lib/schedule.c"
-"${ProjDirPath}/src-gen/${ProjName}/lib/util.c"
-"${ProjDirPath}/src-gen/${ProjName}/lib/tag.c"
-"${ProjDirPath}/src-gen/${ProjName}/lib/time.c"
-"${ProjDirPath}/src-gen/${ProjName}/core/mixed_radix.c"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/board.c"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/clock_config.c"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/pin_mux.c"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/board.h"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/clock_config.h"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/pin_mux.h"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/FreeRTOSConfig.h"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/${ProjName}.c"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/core/platform/lf_freertos_support.c"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/lib/schedule.c"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/lib/util.c"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/lib/tag.c"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/lib/time.c"
+"${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}/core/mixed_radix.c"
 )
 
 target_include_directories(${MCUX_SDK_PROJECT_NAME} PRIVATE
-${ProjSDKPath}/boards/frdmk22f/project_template
+${ProjDirPath}/../../../src-gen/${ProjName}/${ProjName}
 )
 
 set(CMAKE_MODULE_PATH
